--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
-    "react-moment": "^1.1.2"
+    "react-moment": "^1.1.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.15.0",
