--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "nextjs-progressbar": "0.0.14",
     "qs": "^6.10.3",
     "react": "18.1.0",
+    "react-bootstrap-typeahead": "^5.2.2",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
+    "react-search-autocomplete": "^6.1.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
