--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.3",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "nextjs-progressbar": "0.0.14",
     "qs": "^6.10.3",
     "react": "18.1.0",
     "react-bootstrap-typeahead": "^5.2.2",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.32.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
