--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-SHOPIFY_STOREFRONT_ACCESSTOKEN='544244918c7e36ff08a00d337fdd1734'
-SHOPIFY_STORE_DOMAIN='joshuajabakumar.myshopify.com'
+SHOPIFY_STOREFRONT_ACCESSTOKEN=''
+SHOPIFY_STORE_DOMAIN=''
 NODE_ENV='test'
-STRAPI_CMS_DOMAIN='http://localhost:1337'
+STRAPI_CMS_DOMAIN=''
 NEXT_PUBLIC_STRAPI_API_URL=
