--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-moment": "^1.1.2",
     "react-search-autocomplete": "^6.1.3",
     "react-slick": "^0.29.0",
+    "react-user-avatar": "^1.10.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
