--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^6.3.3",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
+    "next-auth": "^4.10.2",
     "nextjs-progressbar": "0.0.14",
+    "pg": "^8.7.3",
     "qs": "^6.10.3",
     "react": "18.1.0",
     "react-bootstrap-typeahead": "^5.2.2",
